Fix parallax element on mobile
Because of mobiledetect, only the background image was loaded. Now it's loaded normally, but without the parallax effect.

--- a/content/themes/elements/css/app.css
+++ b/content/themes/elements/css/app.css
@@ -1331,7 +1331,7 @@ h1, h2, h3, p, a {
 h1, h2 {
   font-family: trademarker;
   font-size: 80px;
-  line-height: 0.7; }
+  line-height: 0.9; }
 
 h2 {
   font-size: 30px;
