--- a/content/themes/elements/sass/base/typo/_typography.scss
+++ b/content/themes/elements/sass/base/typo/_typography.scss
@@ -10,7 +10,7 @@ h1{
   @include trademarker;
 
   font-size: 80px;
-  line-height: 0.7;
+  line-height: 0.9;
 }
 
 h2{
